use godep when installing

--- a/circle.yml
+++ b/circle.yml
@@ -27,8 +27,8 @@ dependencies:
     - sudo service postgresql stop
     - sudo service redis-server stop
   post:
-    - go install ./...
-    - go test -i ./...
+    - godep go install ./...
+    - godep go test -i ./...
     - gometalinter --install
     - gox -arch=amd64 -os="linux darwin windows" -output="${CIRCLE_ARTIFACTS}/{{.Dir}}-$(<VERSION)-{{.OS}}-{{.Arch}}" -ldflags="-X main.Version=$(<VERSION)"
     - if [ -n "$PASSPHRASE" ]; then for i in ${CIRCLE_ARTIFACTS}/*; do gpg --detach-sig --no-use-agent --yes --batch --passphrase=$PASSPHRASE -u mesos-dns --sign --armor $i; done; fi
